--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^13.11.0",
-    "cypress-xpath": "^2.0.1"
+    "cypress-xpath": "^2.0.1",
+    "dotenv": "^16.4.5",
+    "jest": "^29.7.0",
+    "ts-node": "^10.9.2"
   }
 }
