--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@cypress/code-coverage": "^3.12.39",
     "cypress": "^13.11.0",
     "cypress-iframe": "^1.0.1",
     "cypress-xpath": "^2.0.1",
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
+    "nyc": "^17.0.0",
     "ts-node": "^10.9.2"
   }
 }
