--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@badeball/cypress-cucumber-preprocessor": "^20.0.7",
+    "@cypress/code-coverage": "^3.12.39",
     "cypress": "^13.11.0",
     "cypress-iframe": "^1.0.1",
     "cypress-mochawesome-reporter": "^3.8.2",
+    "cypress-sql-server": "^1.0.0",
     "cypress-xpath": "^2.0.1",
     "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "ts-node": "^10.9.2"
+  },
+  "dependencies": {
+    "@cypress/browserify-preprocessor": "latest"
   }
 }
